crates/plotnik-lib/tests/02-parser/recovery_validation/strict_anchor_in_alternation.txt
Q = [
  (a)
  .!
  (b)
]
------------------ DIAGNOSTICS -------------------
error: anchors cannot appear directly in alternations
 --> query.ptk:3:3
  |
3 |   .!
  |   ^^
  |
help: use `[{(a) . (b)} (c)]` to anchor within a branch
